--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2573,6 +2573,7 @@
 			justify-content: center;
 			width: 100%;
 			margin-left: 0;
+			z-index: -1;
 		}
 
 			ul.actions.special li:first-child {
@@ -2854,18 +2855,15 @@
 		input[type="reset"].primary,
 		input[type="button"].primary,
 		.button.primary {
-			/* background-color: #e89980;
-			color: #ffffff !important; */
 			background-color: #555;
-			box-shadow: none !important;
-			color: #fff !important;
+			box-shadow: none;
+			color: #fff;
 		}
 
 			input[type="submit"].primary:hover,
 			input[type="reset"].primary:hover,
 			input[type="button"].primary:hover,
 			.button.primary:hover {
-				/* background-color: #ecaa96; */
 				background-color: #626262;
 			}
 
@@ -2873,7 +2871,6 @@
 			input[type="reset"].primary:active,
 			input[type="button"].primary:active,
 			.button.primary:active {
-				/* background-color: #e4886a; */
 				background-color: #484848;
 			}
 
@@ -2886,7 +2883,7 @@
 		.button:disabled {
 			background-color: #777 !important;
 			box-shadow: inset 0 -0.15em 0 0 rgba(0, 0, 0, 0.15);
-			color: #f5f5f5 !important;
+			color: #f5f5f5;
 			cursor: default;
 			opacity: 0.25;
 		}
@@ -3612,7 +3609,13 @@
 				top: 0;
 				width: 275px;
 				z-index: 10002;
-				background: #777;
+				/* background: #e89980; */
+				background-color: #4686a0;
+				/* color: rgba(255, 255, 255, 0.75);
+				background-attachment: fixed,							fixed,							fixed;
+				background-image: url("images/overlay2.png"), url("images/overlay4.svg"), linear-gradient(45deg, #9dc66b, #4fa49a 50%, #4361c2 95%);
+				background-position: top left,						center center,					center center;
+				background-size: auto,							cover,							cover; */
 				color: #fff;
 			}
 
@@ -4024,11 +4027,15 @@
 			-webkit-transform: translateY(30em);
 			-ms-transform: translateY(30em);
 			transform: translateY(30em);
-			opacity: 0;
+			opacity: 1;
 		}
 
 body.is-preload #banner:after {
 	opacity: 1;
+}
+
+.box.special.home {
+	z-index: 100000 !important;
 }
 
 .outer-header {
@@ -4042,8 +4049,8 @@ body.is-preload #banner:after {
 				.main.style2 button.primary,
 				.main.style2 .button.primary {
 					background-color: #ffffff;
-					box-shadow: inset 0 0 0 1px #ffffff !important;
-					color: #333 !important;
+					box-shadow: inset 0 0 0 1px #ffffff;
+					color: #333;
 				}
 
 					.main.style2 input[type="submit"].primary:hover,
@@ -4051,8 +4058,8 @@ body.is-preload #banner:after {
 					.main.style2 input[type="button"].primary:hover,
 					.main.style2 button.primary:hover,
 					.main.style2 .button.primary:hover {
-						background-color: rgba(255, 255, 255, 0.125) !important;
-						color: #ffffff !important;
+						background-color: rgba(255, 255, 255, 0.125);
+						color: #ffffff;
 					}
 
 					.main.style2 input[type="submit"].primary:active,
@@ -4060,7 +4067,7 @@ body.is-preload #banner:after {
 					.main.style2 input[type="button"].primary:active,
 					.main.style2 button.primary:active,
 					.main.style2 .button.primary:active {
-						background-color: rgba(255, 255, 255, 0.25) !important;
+						background-color: rgba(255, 255, 255, 0.25);
 }
 
 #main input[type="submit"].primary.alt,
@@ -4069,8 +4076,8 @@ body.is-preload #banner:after {
 				#main button.primary.alt,
 				#main .button.primary.alt {
 					background-color: #4361c2;
-					box-shadow: inset 0 0 0 1px #ffffff !important;
-					color: #ffffff !important;
+					box-shadow: inset 0 0 0 1px #ffffff;
+					color: #ffffff;
 				}
 
 					#main input[type="submit"].primary.alt:hover,
@@ -4078,8 +4085,8 @@ body.is-preload #banner:after {
 					#main input[type="button"].primary.alt:hover,
 					#main button.primary.alt:hover,
 					#main .button.primary.alt:hover {
-						background-color: rgba(67, 97, 194, 0.825) !important;
-						color: #ffffff !important;
+						background-color: rgba(67, 97, 194, 0.825);
+						color: #ffffff;
 					}
 
 					#main input[type="submit"].primary.alt:active,
@@ -4087,7 +4094,7 @@ body.is-preload #banner:after {
 					#main input[type="button"].primary.alt:active,
 					#main button.primary.alt:active,
 					#main .button.primary.alt:active {
-						background-color: rgba(43, 77, 178, 0.25) !important;
+						background-color: rgba(43, 77, 178, 0.25);
 					}
 
 
@@ -4096,21 +4103,13 @@ body.is-preload #banner:after {
 					#main input[type="button"].alt:hover,
 					#main button.alt:hover,
 					#main .button.alt:hover {
-						background-color: rgba(165, 165, 165, 0.125) !important;
+						background-color: rgba(165, 165, 165, 0.125);
 					}
 
 #main header {
 	margin-bottom: 0;
 }
 
-/* .submit-btn {
-	width: 100%;
-	display: flex;
-	justify-content: center;
-	align-items: center;
+#header #home-menu {
+	display: none;
 }
-
-#home-form {
-	/* text-align: center; */
-	/* justify-content: center;
-} */
