--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4075,7 +4075,7 @@ body.is-preload #banner:after {
 				#main input[type="button"].primary.alt,
 				#main button.primary.alt,
 				#main .button.primary.alt {
-					background-color: #4361c2;
+					background-color: #4686a0;
 					box-shadow: inset 0 0 0 1px #ffffff;
 					color: #ffffff;
 				}
@@ -4094,7 +4094,7 @@ body.is-preload #banner:after {
 					#main input[type="button"].primary.alt:active,
 					#main button.primary.alt:active,
 					#main .button.primary.alt:active {
-						background-color: rgba(43, 77, 178, 0.25);
+						background-color: rgba(67, 97, 194, 1);
 					}
 
 
@@ -4112,4 +4112,8 @@ body.is-preload #banner:after {
 
 #header #home-menu {
 	display: none;
+}
+
+#headshot {
+	border-radius: 100%;
 }
