--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2416,6 +2416,7 @@
 			line-height: 5.5em;
 			margin: 0 0 2em 0;
 			width: 5.5em;
+			text-align: center;
 		}
 
 			.icon.major:before {
@@ -3240,6 +3241,13 @@
 				color: #666;
 			}
 
+			#banner input[type="submit"].primary:hover,
+			#banner input[type="reset"].primary:hover,
+			#banner input[type="button"].primary:hover,
+			#banner .button.primary:hover {
+				background: rgba(255, 255, 255, 0.7);;
+			}
+
 /* Main */
 
 	#main {
@@ -3349,6 +3357,13 @@
 			box-shadow: none;
 			background: #fff;
 			color: #e89980;
+		}
+
+		#cta input[type="submit"]:hover,
+		#cta input[type="reset"]:hover,
+		#cta input[type="button"]:hover,
+		#cta .button:hover {
+			background-color: rgba(255, 255, 255, 0.8);
 		}
 
 		#cta input[type="text"],
@@ -4116,4 +4131,13 @@ body.is-preload #banner:after {
 
 #headshot {
 	border-radius: 100%;
+}
+
+.hobbies {
+	display: flex;
+	justify-content: center;
+}
+
+.hobbies .icon {
+	margin: 0 .8rem;
 }
